# cemetery-3D

./: .gitignore  CMakeLists.txt  README.md  main.c
resources/: DISCLAIMER.md  readme
src/: asset_loader.c  controls.c  game.c  globals.h  headers.h  initializers.c  main.c
